<resources>
    <string name="app_name">Voxrigo</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="sign_in_to_continue">Hello there, Sign in to continue</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
