<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/login_card"
        android:src="@drawable/icon_splash"
        android:layout_marginBottom="50dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/login_card"
        android:layout_width="300dp"
        android:layout_height="350dp"
        app:cardMaxElevation="8dp"
        app:cardCornerRadius="8dp"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/first_text_view_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_back"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_to_continue"
                android:textStyle="bold"
                android:textSize="16sp"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/email_and_pass_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/email_edit_text_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingLeft="5dp"
                android:maxLines="1"
                android:inputType="textEmailAddress" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp"
                    android:maxLines="1"
                    android:paddingBottom="10dp" />

                <ImageView
                    android:id="@+id/show_pass_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:alpha=".5"
                    android:onClick="ShowHidePass"
                    android:padding="5dp"
                    android:src="@drawable/eye_slash" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:text="@string/forgot_password"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="170dp"/>

        <Button style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:id="@+id/login_button"
            android:layout_below="@+id/email_and_pass_linear_layout"
            android:layout_marginTop="250dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:enabled="true" />

        <LinearLayout
            android:id="@+id/create_account_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="300dp"
            android:layout_marginLeft="25dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginLeft="5dp"/>




        </LinearLayout>




    </androidx.cardview.widget.CardView>



</RelativeLayout>